--- a/codeup_design.html
+++ b/codeup_design.html
@@ -9,8 +9,17 @@
 
 </head>
 <body>
-<div class="header"><img class="logo" src="images/logo.jpg" alt="logo"><div class="smlheader"> </div></div>
+<div class="header"><div class="smlheader"><img class="logo" src="images/logo.png" alt="logo"></div></div>
 <div class="container">
+
+
+
+
+
+
+
+
+
 
 
 </div>
