--- a/codeup_design.html
+++ b/codeup_design.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <div class="header"><div class="smlheader"><img class="logo" src="images/logo.png" alt="logo"></div></div>
+<div class="title"><h2>codeup design</h2></div>
+
 <div class="container">
 
 
