--- a/codeup_design.html
+++ b/codeup_design.html
@@ -12,7 +12,17 @@
 <div class="header"><div class="smlheader"><img class="logo" src="images/logo.png" alt="logo"></div></div>
 <div class="title"><h2>codeup design</h2></div>
 
+    <nav class="navbar navbar-light">
+    <ul>
+        <li><a class="navbar-brand" href="#">Services</a></li>
+        <li><a class="navbar-brand" href="#">Work</a></li>
+        <li><a class="navbar-brand" href="#">Blog</a></li>
+        <li><a class="navbar-brand" href="#">Contact</a></li>
+
+    </ul>
+
 <div class="container">
+
 
 
 
