played with anv bar, still need to 'straighten it out'

--- a/codeup_design.html
+++ b/codeup_design.html
@@ -13,13 +13,13 @@
 <div class="title"><h2>codeup design</h2></div>
 
     <nav class="navbar navbar-light">
-    <ul>
+    <ul class="navlist">
         <li><a class="navbar-brand" href="#">Services</a></li>
         <li><a class="navbar-brand" href="#">Work</a></li>
         <li><a class="navbar-brand" href="#">Blog</a></li>
         <li><a class="navbar-brand" href="#">Contact</a></li>
-
     </ul>
+    </nav>
 
 <div class="container">
 
