--- a/codeup_design.html
+++ b/codeup_design.html
@@ -13,15 +13,16 @@
 <div class="title"><h2>codeup design</h2></div>
 
     <nav class="navbar navbar-light">
-    <ul class="navlist">
-        <li><a class="navbar-brand" href="#">Services</a></li>
-        <li><a class="navbar-brand" href="#">Work</a></li>
-        <li><a class="navbar-brand" href="#">Blog</a></li>
-        <li><a class="navbar-brand" href="#">Contact</a></li>
+    <ul class="nav mx-auto">
+        <li class="nav-item"><a class="nav-link text-dark" href="#">Services</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" href="#">Work</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" href="#">Block</a></li>
+        <li class="nav-item"><a class="nav-link text-dark" href="#">Contact</a></li>
     </ul>
     </nav>
 
 <div class="container">
+    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
 
 
 
