started on the circles

--- a/codeup_design.html
+++ b/codeup_design.html
@@ -22,9 +22,11 @@
     </nav>
 
 <div class="container">
-    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-
-
+    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
+    <h2>FROM PARK CITY, UTAH</h2><br>
+    <div class="row">
+        <div id="design-orb" class="col-xs-6">DESIGN</div>
+    </div>
 
 
 
