--- a/codeup_design.html
+++ b/codeup_design.html
@@ -25,7 +25,7 @@
     <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
     <h2>FROM PARK CITY, UTAH</h2><br>
     <div class="row">
-        <div id="design-orb" class="col-xs-6">DESIGN</div>
+        <div class="col-6"><div id="design-orb">DESIGN</div></div>
     </div>
 
 
