Added Colored Circles

--- a/codeup_design.html
+++ b/codeup_design.html
@@ -25,7 +25,12 @@
     <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
     <h2>FROM PARK CITY, UTAH</h2><br>
     <div class="row">
-        <div class="col-6"><div id="design-orb">DESIGN</div></div>
+        <div class="col-6"><div id="design-orb"> <div class= "orb-text">DESIGN</div></div>
+        <div class="col-6"><div id="develop-orb"> <div class= "orb-text2">DEVELOP</div></div>
+        <div class="col-6"><div id="support-orb"> <div class= "orb-text3">SUPPORT</div></div>
+        <div class="col-6"><div id="host-orb"> <div class= "orb-text4">HOST</div></div>
+
+        </div>
     </div>
 
 
