--- a/codeup_design.html
+++ b/codeup_design.html
@@ -25,23 +25,73 @@
     <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
     <h2>FROM PARK CITY, UTAH</h2><br>
     <div class="row">
-        <div class="col-6"><div id="design-orb"> <div class= "orb-text">DESIGN</div></div>
-        <div class="col-6"><div id="develop-orb"> <div class= "orb-text2">DEVELOP</div></div>
-        <div class="col-6"><div id="support-orb"> <div class= "orb-text3">SUPPORT</div></div>
-        <div class="col-6"><div id="host-orb"> <div class= "orb-text4">HOST</div></div>
+        <div><div id="design-orb"> <div class= "orb-text">DESIGN</div></div></div>
+        <div><div id="develop-orb"> <div class= "orb-text2">DEVELOP</div></div></div>
+        <div><div id="support-orb"> <div class= "orb-text3">SUPPORT</div></div></div>
+        <div><div id="host-orb"> <div class= "orb-text4">HOST</div></div></div>
+    </div>
+    <br>
+    <div class=".hidden"><hr></div>
+    <br>
+    <div class="title"><h2>SELECTED WORK</h2></div>
+    <div class="frame">
+        <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
-        </div>
+
+
+        <span class="abel">FEATURED PROJECT</span>
+        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
+        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
+        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
+        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
+
     </div>
 
 
+    <div class="frame hidden">
+        <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
 
 
+        <span class="abel">FEATURED PROJECT</span>
+        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
+        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
+        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
+        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
+
+    </div>
+
+    <div class="frame hidden">
+        <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
 
 
+        <span class="abel">FEATURED PROJECT</span>
+        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
+        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
+        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
+        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
 
+    </div>
+
+    <div class="frame hidden">
+        <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
+
+
+
+        <span class="abel">FEATURED PROJECT</span>
+        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
+        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
+        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
+        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
+
+    </div>
 
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
