messed with the small icons

--- a/codeup_design.html
+++ b/codeup_design.html
@@ -40,10 +40,10 @@
 
 
         <span class="abel">FEATURED PROJECT</span>
-        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
-        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
-        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
-        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
+        <div><div id="h-orb"> <div class= "smallorb-text">H</div></div></div>
+        <div><div id="s-orb"> <div class= "smallorb-text">S</div></div></div>
+        <div><div id="dev-orb"> <div class= "smallorb-text">D</div></div></div>
+        <div><div id="d-orb"> <div class= "smallorb-text">D</div></div></div>
 
     </div>
 
@@ -54,10 +54,10 @@
 
 
         <span class="abel">FEATURED PROJECT</span>
-        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
-        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
-        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
-        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
+        <div><div id="h-orb1"> <div class= "smallorb-text">H</div></div></div>
+        <div><div id="s-orb1"> <div class= "smallorb-text">S</div></div></div>
+        <div><div id="dev-orb1"> <div class= "smallorb-text">D</div></div></div>
+        <div><div id="d-orb1"> <div class= "smallorb-text">D</div></div></div>
 
     </div>
 
@@ -67,10 +67,10 @@
 
 
         <span class="abel">FEATURED PROJECT</span>
-        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
-        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
-        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
-        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
+        <div><div id="h-orb2"> <div class= "smallorb-text">H</div></div></div>
+        <div><div id="s-orb2"> <div class= "smallorb-text">S</div></div></div>
+        <div><div id="dev-orb2"> <div class= "smallorb-text">D</div></div></div>
+        <div><div id="d-orb2"> <div class= "smallorb-text">D</div></div></div>
 
     </div>
 
@@ -80,13 +80,12 @@
 
 
         <span class="abel">FEATURED PROJECT</span>
-        <div><div > <div class= "smallorb-text d-orb">H</div></div></div>
-        <div><div > <div class= "smallorb-text dev-orb">S</div></div></div>
-        <div><div > <div class= "smallorb-text s-orb">D</div></div></div>
-        <div><div > <div class= "smallorb-text h-orb">D</div></div></div>
+        <div><div id="h-orb3"> <div class= "smallorb-text">H</div></div></div>
+        <div><div id="s-orb3"> <div class= "smallorb-text">S</div></div></div>
+        <div><div id="dev-orb3"> <div class= "smallorb-text">D</div></div></div>
+        <div><div id="d-orb3"> <div class= "smallorb-text">D</div></div></div>
 
     </div>
-
 </div>
 
 
