--- a/codeup_design.html
+++ b/codeup_design.html
@@ -47,6 +47,7 @@
 
     </div>
 
+<!--APPLE COMPUTER IMAGE-->
 
     <div class="frame hidden">
         <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
@@ -87,6 +88,8 @@
 
     </div>
 </div>
+
+
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
