made the "small" version of the page

--- a/codeup_design.html
+++ b/codeup_design.html
@@ -15,26 +15,31 @@
     <nav class="navbar navbar-light">
     <ul class="nav mx-auto">
         <li class="nav-item"><a class="nav-link text-dark" href="#">Services</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="#">Work</a></li>
-        <li class="nav-item"><a class="nav-link text-dark" href="#">Block</a></li>
+        <li class="nav-item"><a class="nav-link text-dark workpush" href="#">Work</a></li>
+        <li class="nav-item"><a class="nav-link text-dark blogpush" href="#">Blog</a></li>
         <li class="nav-item"><a class="nav-link text-dark" href="#">Contact</a></li>
     </ul>
     </nav>
 
+<h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
+<h2>FROM PARK CITY, UTAH</h2><br>
+<div class="row">
+    <div class="col-6 col-sm-3 nopad"><div id="design-orb"> <div class= "orb-text">DESIGN</div></div></div>
+    <div class="col-6 col-sm-3 nopad"><div id="develop-orb"> <div class= "orb-text2">DEVELOP</div></div></div>
+    <div class="col-6 col-sm-3 nopad"><div id="support-orb"> <div class= "orb-text3">SUPPORT</div></div></div>
+    <div class="col-6 col-sm-3 nopad"><div id="host-orb"> <div class= "orb-text4">HOST</div></div></div>
+</div>
+
 <div class="container">
-    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
-    <h2>FROM PARK CITY, UTAH</h2><br>
-    <div class="row">
-        <div><div id="design-orb"> <div class= "orb-text">DESIGN</div></div></div>
-        <div><div id="develop-orb"> <div class= "orb-text2">DEVELOP</div></div></div>
-        <div><div id="support-orb"> <div class= "orb-text3">SUPPORT</div></div></div>
-        <div><div id="host-orb"> <div class= "orb-text4">HOST</div></div></div>
-    </div>
     <br>
     <div class=".hidden"><hr></div>
     <br>
     <div class="title"><h2>SELECTED WORK</h2></div>
-    <div class="frame">
+
+
+<!--IMAGE FRAMES-->
+    <div class="row">
+    <div class="frame col-12 col-sm-6">
         <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
 
@@ -47,9 +52,7 @@
 
     </div>
 
-<!--APPLE COMPUTER IMAGE-->
-
-    <div class="frame hidden">
+    <div class="frame hidden col-12 col-sm-6">
         <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
 
@@ -62,7 +65,7 @@
 
     </div>
 
-    <div class="frame hidden">
+    <div class="frame hidden col-12 col-sm-6">
         <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
 
@@ -75,7 +78,7 @@
 
     </div>
 
-    <div class="frame hidden">
+    <div class="frame hidden col-12 col-sm-6">
         <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
 
@@ -87,6 +90,7 @@
         <div><div id="d-orb3"> <div class= "smallorb-text">D</div></div></div>
 
     </div>
+</div>
 </div>
 
 
