--- a/codeup_design.html
+++ b/codeup_design.html
@@ -37,7 +37,8 @@
     <div class="title"><h2>SELECTED WORK</h2></div>
 
 
-<!--IMAGE FRAMES-->
+<!--APPLE IMAGE-->
+
     <div class="row">
     <div class="frame col-12 col-sm-6">
         <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
@@ -52,8 +53,10 @@
 
     </div>
 
+<!--MACBOOK IMAGE-->
+
     <div class="frame hidden col-12 col-sm-6">
-        <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
+        <img src="images/macbook.jpg" alt="pic1" class="picture">
 
 
 
@@ -65,8 +68,10 @@
 
     </div>
 
+<!--MAN IMAGE-->
+
     <div class="frame hidden col-12 col-sm-6">
-        <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
+        <img src="images/man.jpg" alt="pic1" class="picture">
 
 
 
@@ -78,8 +83,11 @@
 
     </div>
 
+
+<!--SECURITY IMAGE-->
+
     <div class="frame hidden col-12 col-sm-6">
-        <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
+        <img src="images/security.jpg" alt="pic1" class="picture">
 
 
 
