mostly done with the med screen, still need to fill in "the last" and last tweet but formatting should be good.

--- a/codeup_design.html
+++ b/codeup_design.html
@@ -34,13 +34,17 @@
     <br>
     <div class=".hidden"><hr></div>
     <br>
-    <div class="title"><h2>SELECTED WORK</h2></div>
+    <div class="title col-md-8"><h2 class="selecttitle">SELECTED WORK</h2></div>
+    <div class="title col-md-4 hidden2"><h2 class="selecttitle">The Last</h2></div>
+    <br>
 
 
 <!--APPLE IMAGE-->
 
     <div class="row">
-    <div class="frame col-12 col-sm-6">
+
+        <div class="col-md-8">
+        <div class="frame frameleft col-12 col-sm-6">
         <img src="images/apple-ipad.jpg" alt="pic1" class="picture">
 
 
@@ -51,11 +55,11 @@
         <div><div id="dev-orb"> <div class= "smallorb-text">D</div></div></div>
         <div><div id="d-orb"> <div class= "smallorb-text">D</div></div></div>
 
-    </div>
+        </div>
 
 <!--MACBOOK IMAGE-->
 
-    <div class="frame hidden col-12 col-sm-6">
+        <div class="frame frameright hidden col-12 col-sm-6">
         <img src="images/macbook.jpg" alt="pic1" class="picture">
 
 
@@ -66,11 +70,11 @@
         <div><div id="dev-orb1"> <div class= "smallorb-text">D</div></div></div>
         <div><div id="d-orb1"> <div class= "smallorb-text">D</div></div></div>
 
-    </div>
+        </div>
 
 <!--MAN IMAGE-->
 
-    <div class="frame hidden col-12 col-sm-6">
+        <div class="frame frameright hidden col-12 col-sm-6">
         <img src="images/man.jpg" alt="pic1" class="picture">
 
 
@@ -81,12 +85,12 @@
         <div><div id="dev-orb2"> <div class= "smallorb-text">D</div></div></div>
         <div><div id="d-orb2"> <div class= "smallorb-text">D</div></div></div>
 
-    </div>
+        </div>
 
 
 <!--SECURITY IMAGE-->
 
-    <div class="frame hidden col-12 col-sm-6">
+        <div class="frame frameleft hidden col-12 col-sm-6">
         <img src="images/security.jpg" alt="pic1" class="picture">
 
 
@@ -97,8 +101,13 @@
         <div><div id="dev-orb3"> <div class= "smallorb-text">D</div></div></div>
         <div><div id="d-orb3"> <div class= "smallorb-text">D</div></div></div>
 
+        </div>
+        </div>
+<!--THE LAST-->
+        <div class="hidden2 col-md-4 nopad">
+            bsajdkbjkf
+        </div>
     </div>
-</div>
 </div>
 
 
