--- a/codeup_design.html
+++ b/codeup_design.html
@@ -105,7 +105,16 @@
         </div>
 <!--THE LAST-->
         <div class="hidden2 col-md-4 nopad">
-            bsajdkbjkf
+
+            <img src="images/mobile-phone.jpg" alt="pic1" class="smpic">  <h4> THE ADMIN BAR AND ABSOLUTE POSITIONING</h4> <br>
+            <p></p>
+            <img src="images/head.jpg" alt="pic1" class="smpic"> <h4> NIBBLER AWESOME WEBSITE TESTING</h4><br>
+            <p></p>
+            <img src="images/ipad.jpg" alt="pic1" class="smpic"> <h4> HOW TO GET GOOGLE TO LIKE YOU</h4><br>
+            <p></p>
+            <img src="images/twitter.png" alt="pic1" class="twit"> <h6> LAST TWEET</h6><br>
+
+
         </div>
     </div>
 </div>
