--- a/codeup_design.html
+++ b/codeup_design.html
@@ -35,7 +35,7 @@
     <div class=".hidden"><hr></div>
     <br>
     <div class="title col-md-8"><h2 class="selecttitle">SELECTED WORK</h2></div>
-    <div class="title col-md-4 hidden2"><h2 class="selecttitle">The Last</h2></div>
+    <div class="title col-md-4 hidden2"><h2 class="selecttitle hidden2">THE LAST</h2></div>
     <br>
 
 
@@ -106,14 +106,23 @@
 <!--THE LAST-->
         <div class="hidden2 col-md-4 nopad">
 
-            <img src="images/mobile-phone.jpg" alt="pic1" class="smpic">  <h4> THE ADMIN BAR AND ABSOLUTE POSITIONING</h4> <br>
-            <p></p>
-            <img src="images/head.jpg" alt="pic1" class="smpic"> <h4> NIBBLER AWESOME WEBSITE TESTING</h4><br>
-            <p></p>
-            <img src="images/ipad.jpg" alt="pic1" class="smpic"> <h4> HOW TO GET GOOGLE TO LIKE YOU</h4><br>
-            <p></p>
-            <img src="images/twitter.png" alt="pic1" class="twit"> <h6> LAST TWEET</h6><br>
+            <span class="row">
+            <img src="images/mobile-phone.jpg" alt="pic1" class="smpic frameleft">  <h6 class="col-8"> THE ADMIN BAR AND ABSOLUTE POSITIONING</h6> <br>
+            </span>
+            <br>
+            <span class="row">
+            <img src="images/head.jpg" alt="pic1" class="smpic frameleft"> <h6 class="col-8"> NIBBLER AWESOME WEBSITE TESTING</h6><br>
+            </span>
+            <br>
+            <span class="row">
+            <img src="images/ipad.jpg" alt="pic1" class="smpic frameleft"> <h6 class="col-8"> HOW TO GET GOOGLE TO LIKE YOU</h6><br>
+            </span>
+            <br>
+            <span class="row">
+            <img src="images/twitter.png" alt="pic1" class="twit"> <h6 class="tweet">LAST TWEET</h6>
+            </span>
 
+            <span class="abel">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam excepturi, nihil non quod sapiente voluptates. Accusamus dolore doloribus maxime sit.</span>
 
         </div>
     </div>
